--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <title>404 Page not found | My New Hugo Site</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
+    <link rel="stylesheet" href='css/simple.css/simple.min.css' media="all"
         onload="this.media='all'; this.onload=null;" /></head><body><header>
     <nav>
         
