--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
-        onload="this.media='all'; this.onload=null;" /></head><body><header>
+        onload="this.media='all'; this.onload=null;" /></head><body>
+    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'><header>
     <nav>
         
         <a href="/IPM3/">Home</a>
