--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignments | My New Hugo Site</title>
+    <title>Assignments | IPM Grupo 23</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
