Project tab changes

--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -22,7 +22,9 @@
 </header><main><h2 id="assignment-1-good-and-bad-design">Assignment 1: Good and bad design</h2>
 <p><strong>Deliverables:</strong></p>
 <ul>
-<li><a href="../test.pdf">Guilherme Figueira - 60288</a></li>
+<li>André Ribeiro - 59835</li>
+<li>Gonçalo Gingeira - 60355</li>
+<li><a href="../Assignment1-60288.pdf">Guilherme Figueira - 60288</a></li>
 </ul>
 
 </aside>
