--- a/public/projeto/index.html
+++ b/public/projeto/index.html
@@ -22,8 +22,14 @@
 </header><main><h2 id="feast---your-cooking-companion">Feast - Your cooking companion</h2>
 <p><img src="../logo.png" alt="logo"></p>
 <h3 id="description">Description</h3>
-<p>User-friendly web or mobile app that simplifies the process of finding, saving, and planning meals.</p>
+<p>User-friendly mobile app that simplifies the process of finding, saving, and planning meals.</p>
 <p>This app can be a valuable resource for individuals or families looking to organize their meal preparation, explore new recipes, and manage their grocery shopping efficiently.</p>
+<p><strong>Features:</strong></p>
+<ul>
+<li><strong>Community based recipes</strong>: Users can upload their own recipes to the platform.</li>
+<li><strong>Filter recipes</strong> by categories like: &ldquo;vegan&rdquo;, &ldquo;pescatarian&rdquo;, &ldquo;breakfast&rdquo;, etc.</li>
+<li><strong>Digital fridge</strong>: Users can catalog what ingrediants they have and see what recipes they can make.</li>
+</ul>
 
 </aside>
     </main><footer><small> This website was created for the <b>Human-Computer Interaction</b> course in FCT-UNL 📚<small>
