Changed 'home' and added member photos

--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -7,7 +7,13 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
         onload="this.media='all'; this.onload=null;" /></head><body>
-    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'><header>
+    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'>
+    <style>
+        img {
+            opacity: 1.0;
+            filter: brightness(100%);
+        }
+    </style><header>
     <nav>
         
         <a href="/IPM3/">Home</a>
@@ -22,9 +28,10 @@
 </header><main><h2 id="assignment-1-good-and-bad-design">Assignment 1: Good and bad design</h2>
 <p><strong>Deliverables:</strong></p>
 <ul>
-<li>André Ribeiro - 59835</li>
+<li>Alexandre Fernandes - 58239</li>
+<li><a href="../A1-AR.pdf">André Ribeiro - 59835</a></li>
 <li>Gonçalo Gingeira - 60355</li>
-<li><a href="../Assignment1-60288.pdf">Guilherme Figueira - 60288</a></li>
+<li><a href="../A1-GF.pdf">Guilherme Figueira - 60288</a></li>
 </ul>
 
 </aside>
