--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
         onload="this.media='all'; this.onload=null;" /></head><body>
-    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'><header>
+    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'>
+    <style>
+        img {
+            opacity: 1.0;
+            filter: brightness(100%);
+        }
+    </style><header>
     <nav>
         
         <a href="/IPM3/">Home</a>
@@ -24,11 +30,60 @@
 <p><strong>Turno prático</strong>: p.3</p>
 <p><strong>Elementos</strong>:</p>
 <ul>
+<li>Alexandre Fernandes - 58239 - <a href="mailto:aal.fernandes@campus.fct.unl.pt">aal.fernandes@campus.fct.unl.pt</a></li>
 <li>André Ribeiro - 59835 - <a href="mailto:at.ribeiro@campus.fct.unl.pt">at.ribeiro@campus.fct.unl.pt</a></li>
 <li>Gonçalo Gingeira - 60355 - <a href="mailto:g.gingeira@campus.fct.unl.pt">g.gingeira@campus.fct.unl.pt</a></li>
 <li>Guilherme Figueira - 60288 - <a href="mailto:gr.figueira@campus.fct.unl">gr.figueira@campus.fct.unl</a></li>
 </ul>
+<style>
 
+    article, fieldset, dialog {
+  border: 1px solid var(--border);
+  padding: 1rem;
+  border-radius: var(--standard-border-radius);
+  margin-bottom: 1rem;
+}
+
+.image-container {
+    display: flex; /* Display the figures in a row */
+    justify-content: space-between; /* Space evenly between figures */
+}
+
+figure {
+    flex: 1; /* Each figure takes up an equal portion of the container */
+    text-align: center; /* Center align contents */
+    margin-right: 30px;
+}
+
+figure:last-child {
+    margin-right: 0;
+}
+
+</style>
+<br>
+<div class="image-container">
+    <figure>
+        <img src="https://placekitten.com/420/420" alt="Photo of a kitten" width="200" height="90">
+        <figcaption>Team mascot<br>- Mr. Whiskers -</figcaption>
+    </figure>
+    <figure>
+        <img src="https://placekitten.com/420/420" alt="Photo of a kitten" width="200" height="90">
+        <figcaption>Team mascot<br>- Mr. Whiskers -</figcaption>
+    </figure>
+    <figure>
+        <img src="https://placekitten.com/420/420" alt="Photo of a kitten" width="200" height="90">
+        <figcaption>Team mascot<br>- Mr. Whiskers -</figcaption>
+    </figure>
+    <figure>
+        <img src="../foto-GF.png" alt="Photo of a kitten" width="200" height="90">
+        <figcaption>Guilherme Figueira<br>- 60288 -</figcaption>
+    </figure>
+    <!-- Repeat this figure block three more times with different images and captions -->
+</div>
+<blockquote>
+  <p>Thunderbolt and lightning very very frightening me</p>
+  <p><cite>– Galileo </cite></p>
+</blockquote>
 
     </main><footer><small> This website was created for the <b>Human-Computer Interaction</b> course in FCT-UNL 📚<small>
 </footer></body>
