--- a/public/projeto/index.html
+++ b/public/projeto/index.html
@@ -7,7 +7,13 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
         onload="this.media='all'; this.onload=null;" /></head><body>
-    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'><header>
+    <link rel="stylesheet" href='https://grfigueira.github.io/IPM3/css/simple.css/simple.min.css'>
+    <style>
+        img {
+            opacity: 1.0;
+            filter: brightness(100%);
+        }
+    </style><header>
     <nav>
         
         <a href="/IPM3/">Home</a>
@@ -27,8 +33,8 @@
 <p><strong>Features:</strong></p>
 <ul>
 <li><strong>Community based recipes</strong>: Users can upload their own recipes to the platform.</li>
-<li><strong>Filter recipes</strong> by categories like: &ldquo;vegan&rdquo;, &ldquo;pescatarian&rdquo;, &ldquo;breakfast&rdquo;, etc.</li>
-<li><strong>Digital fridge</strong>: Users can catalog what ingrediants they have and see what recipes they can make.</li>
+<li><strong>Filter recipes</strong>: Filter with categories like: &ldquo;vegan&rdquo;, &ldquo;pescatarian&rdquo;, &ldquo;breakfast&rdquo;, etc.</li>
+<li><strong>Digital fridge</strong>: Users can catalog what ingrediants they have and see what meals they can make.</li>
 </ul>
 
 </aside>
