--- a/public/ll/index.html
+++ b/public/ll/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404 Page not found | IPM Grupo 23</title>
+    <title>IPM - Grupo 23 | IPM Grupo 23</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href='/css/simple.css/simple.min.css' media="all"
@@ -23,11 +23,18 @@
         <a href="/IPM3/assignments/">Assignments</a>
         
     </nav>
-    <h1>404 Page not found</h1>
+    <h1>IPM - Grupo 23</h1>
     
-</header><main>
+</header><main><p><strong>Turno prático</strong>: p.3</p>
+<p><strong>Elementos</strong>:</p>
+<ul>
+<li>Alexandre Fernandes - 58239 - <a href="mailto:aal.fernandes@campus.fct.unl.pt">aal.fernandes@campus.fct.unl.pt</a></li>
+<li>André Ribeiro - 59835 - <a href="mailto:at.ribeiro@campus.fct.unl.pt">at.ribeiro@campus.fct.unl.pt</a></li>
+<li>Gonçalo Gingeira - 60355 - <a href="mailto:g.gingeira@campus.fct.unl.pt">g.gingeira@campus.fct.unl.pt</a></li>
+<li>Guilherme Figueira - 60288 - <a href="mailto:gr.figueira@campus.fct.unl">gr.figueira@campus.fct.unl</a></li>
+</ul>
 
-
+</aside>
     </main><footer><small> This website was created for the <b>Human-Computer Interaction</b> course in FCT-UNL 📚<small>
 </footer></body>
 
