--- a/public/projeto/index.html
+++ b/public/projeto/index.html
@@ -27,6 +27,11 @@
     
 </header><main><h2 id="feast---your-cooking-companion">Feast - Your cooking companion</h2>
 <p><img src="../logo.png" alt="logo"></p>
+<br>
+<hr>
+<h3 id="reports">Reports</h3>
+<h4 id="stage-1-project-proposalg_23_stage1pdf"><a href="../G_23_stage1.pdf">Stage 1: project proposal</a></h4>
+<hr>
 <h3 id="description">Description</h3>
 <p>User-friendly mobile app that simplifies the process of finding, saving, and planning meals.</p>
 <p>This app can be a valuable resource for individuals or families looking to organize their meal preparation, explore new recipes, and manage their grocery shopping efficiently.</p>
